2006-12-07  Albert Chu <chu11@llnl.gov>

	Support a Reverse pdcp option.

	* src/pdsh/pcp_server.c : Remove global infd and outfd file descriptors.
	  Set and pass them around via a structure.  End server gracefully
	  rather than through exit().  Adjust API for more flexible use.

	* src/pdsh/main.c (main) : Support new pcp_server() API.
	
	* src/pdsh/pcp_client.h, src/pdsh/pcp_client.c : New files.

	* src/pdsh/dsh.c (_rexpand_dir, _expand_dir, _rcp_write,
	  _rcp_send_file_data, _rcp_sendstr, _rcp_response, _rcp_sendfile) :
	  Removed due to new common functions in pcp_client files.

	* src/pdsh/dsh.c (dsh, _rcp_thread) : Use new pcp_client functions.

	* src/pdsh/opt.c (_infile_names_check) : New function.
	
	* src/pdsh/opt.h, src/pdsh/opt.c : Add support for reverse copy (rpdcp)
	  and pcp client (-Z) options and checks. Use _infile_names_check for 
	  common checks.

	* src/pdsh/dsh.c (dsh, _rcp_thread), src/pdsh/main.c (main) :
	  Support reverse copy.

	* src/pdsh/pcp_server.c (pcp_server) : Remove setuid call.
	  Unnecessary for pdsh/pdcp, a remnant from old rcp code.

	* doc/pdcp.1.in : Update appropriately.

2006-12-06  Mark Grondona <mgrondona@llnl.gov>

	* src/pdsh/dsh.c : Don't close fd in _do_output().

2006-12-05  Mark Grondona <mgrondona@llnl.gov>

	* src/modules/slurm.c : Allow "all" argument to -j to select
	  all nodes with SLURM jobs as targets.

	* doc/pdsh.1.in : Document "all" argument to -j option.

	* config/ac_msghdr_accrights.m4 : Add missing m4 include file.

2006-12-04  Mark Grondona <mgrondona@llnl.gov>

	* configure.ac : Define _POSIX_PTHREAD_SEMANTICS for Solaris
	  to get version of sigwait(2) with two arguments.

	* config/ac_msghdr_accrights.m4, configure.ac, config/Makefile.am : 
	  Add check for msg_accrights in struct msghdr. 

	* src/pdsh/privsep.c : Use msg_accrights instead of msg_control 
	  if it exists. (Fix for compile on Solaris)

	* src/pdsh/pcp_server.c : Ensure roundup is defined.
